# AIBrain

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  version.py
aib/: __init__.py
aib/cfg/: __init__.py  config.py  type_parser.py
aib/cnt/: __init__.py  arr_buf.py  b_data.py  b_dict.py  b_list.py  b_seq_data.py  io.py  seq_queue.py
aib/cv/: __init__.py
aib/cv/cam/: cv_cam.py  (+1 more)
aib/disk/: mon.py  stats.py
aib/ds/: __init__.py  det_loader.py  det_recorder.py  vid_loader.py
aib/job/: base.py
aib/misc/: __init__.py  common_errors.py  common_types.py  health.py  log.py  out.py  single.py  time.py  type_check.py
aib/ml/: __init__.py
aib/perf/: __init__.py  profile.py
aib/pipe/: __init__.py  base.py
aib/subsys/: base.py
aib/sys/: __init__.py  b_job.py  b_mdl.py  b_obj.py  b_pipe.py  b_subsys.py
brain/: core.py
brain/cfg/: config.py  param.py  type_parse.py  yunet_param.py
brain/data/: base.py
brain/disk/: mon.py  stats.py
brain/job/: __init__.py  base.py
brain/la/: tensor.py
brain/misc/: health.py  out.py  time.py  type.py
brain/ml/: base.py
brain/nn/: base.py
brain/pipe/: base.py
brain/subsys/: base.py
brain/tsk/: base.py
brain/utils/: __init__.py
cfg/: cfg.properties
demo/pose_denoising/: README.md  main.py  model_prepration.py  trk.py  vis.py
examples/pose_denoising/: main.py
licenses/: LICENSES.md  README.md
sln/pose_denoising/: main.py  trk.py  vis.py
solution/pose_denoising/: vis.py
src/: main.py
test/: test_profiler.py
tests/: README.md  __init__.py  test_image2d_numpy_interop.py
(+462 files in other folders)
